infrastructure/renovate/webhook/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: renovate-webhook
  namespace: renovate
  labels:
    app.kubernetes.io/name: renovate-webhook
    app.kubernetes.io/part-of: renovate
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: renovate-webhook
